--- a/vector_database.ipynb
+++ b/vector_database.ipynb
@@ -137,11 +137,13 @@
     "\n",
     "\n",
     "query = \"movies about meals\"\n",
+    "query_vector = encoder.encode(query).tolist()\n",
+    "limit = 5\n",
     "\n",
     "hits = qdrant.search(\n",
     "\tcollection_name=collection_name,\n",
-    "\tquery_vector=encoder.encode(query).tolist(),\n",
-    "\tlimit=5\n",
+    "\tquery_vector=query_vector,\n",
+    "\tlimit=limit\n",
     ")\n",
     "for hit in hits:\n",
     "\tprint(hit.payload, \"score:\", hit.score)"
