--- a/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Not using RAG\n",
-    "- The model is not aware of the date today. It still thinks the present time is the last time of its training."
+    "- The model is not aware of the date today. It still thinks the present time is the date of its training."
    ]
   },
   {
