--- a/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation.ipynb
@@ -105,7 +105,7 @@
     "vector_db_result = 'Charles Oliveira suffered a nasty laceration that forced him out of the UFC 294 main event vs. Islam Makhachev. Shortly after UFC CEO Dana White confirmed Alexander Volkanovski stepped in, Oliveira (34-9 MMA, 22-9 UFC) shared a pair of images of the gash, as well as a brief apology video where he sported a bandage on his left brow. “Sorry to everyone but you know everything,” Oliveira wrote in Portuguese.'\n",
     "note = 'Be concise.'\n",
     "\n",
-    "prompt = f\"\"\"Act as a search copilot, be helpful and informative. \\n\n",
+    "prompt_template = f\"\"\"Act as a search copilot, be helpful and informative. \\n\n",
     "-------------- \\n\n",
     "Based on the user's query below: \\n\n",
     "'{user_input}'. \\n\n",
@@ -114,7 +114,7 @@
     "------------- \\n\n",
     "note: {note}\"\"\"\n",
     "\n",
-    "print(llm(prompt))"
+    "print(llm(prompt_template))"
    ]
   },
   {
@@ -147,7 +147,7 @@
     "vector_db_result = 'No information found'\n",
     "note = 'Be concise and dont add any other details if you don\\'t know about it.'\n",
     "\n",
-    "prompt = f\"\"\"Act as a search copilot, be helpful and informative. \\n\n",
+    "prompt_template = f\"\"\"Act as a search copilot, be helpful and informative. \\n\n",
     "-------------- \\n\n",
     "Based on the user's query below: \\n\n",
     "'{user_input}'. \\n\n",
@@ -156,7 +156,7 @@
     "------------- \\n\n",
     "note: {note}\"\"\"\n",
     "\n",
-    "print(llm(prompt))"
+    "print(llm(prompt_template))"
    ]
   },
   {
