--- a/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation.ipynb
@@ -163,7 +163,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition to the large, fairly static LLM, the sports league owns or can access many other information sources, including databases, data warehouses, documents containing player bios, and news feeds that discuss each game in depth. RAG lets the generative AI ingest this information. Now, the chat can provide information that’s more timely, more contextually appropriate, and more accurate."
+    "- In addition to the large, fairly static LLM, the sports league owns or can access many other information sources, including databases, data warehouses, documents containing player bios, and news feeds that discuss each game in depth.\n",
+    "\n",
+    "- RAG lets the generative AI ingest this information. Now, the chat can provide information that’s more timely, more contextually appropriate, and more accurate."
    ]
   }
  ],
