Fix bug in login functionality***
***Add validation for user input***

***Refactor code for better performance***

***Update README with new instructions***

***Fix formatting issues in CSS***

***Add error handling for database connection***

***Update dependencies to latest versions***

***Remove unused code***

***Fix broken links in navigation***

***Improve error messages for better user experience

--- a/vector_database.ipynb
+++ b/vector_database.ipynb
@@ -9,12 +9,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "% pip install sentence-transformers\n",
-    "% pip install qdrant-client"
+    "import os\n",
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"true\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: qdrant-client in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.7.3)\n",
+      "Requirement already satisfied: grpcio>=1.41.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from qdrant-client) (1.60.1)\n",
+      "Requirement already satisfied: grpcio-tools>=1.41.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from qdrant-client) (1.60.1)\n",
+      "Requirement already satisfied: httpx>=0.14.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (0.26.0)\n",
+      "Requirement already satisfied: numpy>=1.26 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from qdrant-client) (1.26.1)\n",
+      "Requirement already satisfied: portalocker<3.0.0,>=2.7.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from qdrant-client) (2.8.2)\n",
+      "Requirement already satisfied: pydantic>=1.10.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from qdrant-client) (2.4.0)\n",
+      "Requirement already satisfied: urllib3<3,>=1.26.14 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from qdrant-client) (2.0.7)\n",
+      "Requirement already satisfied: protobuf<5.0dev,>=4.21.6 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from grpcio-tools>=1.41.0->qdrant-client) (4.25.2)\n",
+      "Requirement already satisfied: setuptools in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from grpcio-tools>=1.41.0->qdrant-client) (68.2.2)\n",
+      "Requirement already satisfied: anyio in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from httpx>=0.14.0->httpx[http2]>=0.14.0->qdrant-client) (4.0.0)\n",
+      "Requirement already satisfied: certifi in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from httpx>=0.14.0->httpx[http2]>=0.14.0->qdrant-client) (2023.7.22)\n",
+      "Requirement already satisfied: httpcore==1.* in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from httpx>=0.14.0->httpx[http2]>=0.14.0->qdrant-client) (1.0.2)\n",
+      "Requirement already satisfied: idna in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from httpx>=0.14.0->httpx[http2]>=0.14.0->qdrant-client) (3.4)\n",
+      "Requirement already satisfied: sniffio in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from httpx>=0.14.0->httpx[http2]>=0.14.0->qdrant-client) (1.3.0)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from httpcore==1.*->httpx>=0.14.0->httpx[http2]>=0.14.0->qdrant-client) (0.14.0)\n",
+      "Requirement already satisfied: h2<5,>=3 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (4.1.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pydantic>=1.10.8->qdrant-client) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.10.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pydantic>=1.10.8->qdrant-client) (2.10.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pydantic>=1.10.8->qdrant-client) (4.8.0)\n",
+      "Requirement already satisfied: hyperframe<7,>=6.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from h2<5,>=3->httpx[http2]>=0.14.0->qdrant-client) (6.0.1)\n",
+      "Requirement already satisfied: hpack<5,>=4.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from h2<5,>=3->httpx[http2]>=0.14.0->qdrant-client) (4.0.0)\n",
+      "Requirement already satisfied: sentence-transformers in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (2.4.0)\n",
+      "Requirement already satisfied: transformers<5.0.0,>=4.32.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (4.38.1)\n",
+      "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (4.66.2)\n",
+      "Requirement already satisfied: torch>=1.11.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (2.2.1)\n",
+      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (1.26.1)\n",
+      "Requirement already satisfied: scikit-learn in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (1.4.1.post1)\n",
+      "Requirement already satisfied: scipy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (1.12.0)\n",
+      "Requirement already satisfied: huggingface-hub>=0.15.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (0.20.3)\n",
+      "Requirement already satisfied: Pillow in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (10.2.0)\n",
+      "Requirement already satisfied: filelock in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.15.1->sentence-transformers) (3.13.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.15.1->sentence-transformers) (2024.2.0)\n",
+      "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.15.1->sentence-transformers) (2.31.0)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.15.1->sentence-transformers) (6.0.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.15.1->sentence-transformers) (4.8.0)\n",
+      "Requirement already satisfied: packaging>=20.9 in /Users/devlinduldulao/Library/Python/3.12/lib/python/site-packages (from huggingface-hub>=0.15.1->sentence-transformers) (23.2)\n",
+      "Requirement already satisfied: sympy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch>=1.11.0->sentence-transformers) (1.12)\n",
+      "Requirement already satisfied: networkx in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch>=1.11.0->sentence-transformers) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch>=1.11.0->sentence-transformers) (3.1.2)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from transformers<5.0.0,>=4.32.0->sentence-transformers) (2023.10.3)\n",
+      "Requirement already satisfied: tokenizers<0.19,>=0.14 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from transformers<5.0.0,>=4.32.0->sentence-transformers) (0.15.2)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from transformers<5.0.0,>=4.32.0->sentence-transformers) (0.4.2)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-learn->sentence-transformers) (1.3.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-learn->sentence-transformers) (3.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from jinja2->torch>=1.11.0->sentence-transformers) (2.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests->huggingface-hub>=0.15.1->sentence-transformers) (3.3.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests->huggingface-hub>=0.15.1->sentence-transformers) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests->huggingface-hub>=0.15.1->sentence-transformers) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests->huggingface-hub>=0.15.1->sentence-transformers) (2023.7.22)\n",
+      "Requirement already satisfied: mpmath>=0.19 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sympy->torch>=1.11.0->sentence-transformers) (1.3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install qdrant-client\n",
+    "! pip install sentence-transformers"
    ]
   },
   {
@@ -26,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,18 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'author': 'Laura Esquivel', 'description': 'A tale where each chapter is a month in the life of the protagonist and is preceded by a recipe. Food and love intermingle in this passionate novel.', 'name': 'Like Water for Chocolate', 'year': 1989} score: 0.45089203\n",
-      "{'author': 'Michael Pollan', 'description': 'A comprehensive look into the modern food chain, questioning what we should eat and why.', 'name': \"The Omnivore's Dilemma\", 'year': 2006} score: 0.4049138\n",
-      "{'author': 'Anthony Bourdain', 'description': \"An insider's view into the culinary world, delving into the chaotic, adrenaline-fueled underbelly of restaurants.\", 'name': 'Kitchen Confidential', 'year': 2000} score: 0.3260684\n",
-      "{'author': 'William Gibson', 'description': 'A hunt for the origins of a mysterious film in the digital age.', 'name': 'Pattern Recognition', 'year': 2003} score: 0.3065939\n",
-      "{'author': 'Douglas Adams', 'description': 'A comedic science fiction series following the misadventures of an unwitting human and his alien friend.', 'name': \"The Hitchhiker's Guide to the Galaxy\", 'year': 1979} score: 0.2852992\n"
+      "{'author': 'Laura Esquivel', 'description': 'A tale where each chapter is a month in the life of the protagonist and is preceded by a recipe. Food and love intermingle in this passionate novel.', 'name': 'Like Water for Chocolate', 'year': 1989} score: 0.45089227\n",
+      "{'author': 'Michael Pollan', 'description': 'A comprehensive look into the modern food chain, questioning what we should eat and why.', 'name': \"The Omnivore's Dilemma\", 'year': 2006} score: 0.40491366\n",
+      "{'author': 'Anthony Bourdain', 'description': \"An insider's view into the culinary world, delving into the chaotic, adrenaline-fueled underbelly of restaurants.\", 'name': 'Kitchen Confidential', 'year': 2000} score: 0.32606834\n",
+      "{'author': 'William Gibson', 'description': 'A hunt for the origins of a mysterious film in the digital age.', 'name': 'Pattern Recognition', 'year': 2003} score: 0.3065938\n",
+      "{'author': 'Douglas Adams', 'description': 'A comedic science fiction series following the misadventures of an unwitting human and his alien friend.', 'name': \"The Hitchhiker's Guide to the Galaxy\", 'year': 1979} score: 0.28529897\n"
      ]
     }
    ],
@@ -113,7 +181,8 @@
     "{ \"name\": \"Eat, Pray, Love\", \"description\": \"Following a divorce, the author embarks on a journey around the world that becomes a quest for self-discovery.\", \"author\": \"Elizabeth Gilbert\", \"year\": 2006 }\n",
     "]\n",
     "\n",
-    "qdrant = QdrantClient(\"localhost\", port=6333)\n",
+    "# qdrant = QdrantClient(\"localhost\", port=6333)\n",
+    "qdrant = QdrantClient(\"https://2dd5c98a-a00a-43f6-8a0c-e811f5334b16.us-east4-0.gcp.cloud.qdrant.io:6333\", api_key=\"9B_lTsOl_mSAOMAdCkZ738SypPowNshc-x4PXkQJRmo7FCTSOwY44w\")\n",
     "collection_name = \"my_books\"\n",
     "\n",
     "qdrant.recreate_collection(\n",
@@ -124,9 +193,9 @@
     "\t)\n",
     ")\n",
     "\n",
-    "qdrant.upload_records(\n",
+    "qdrant.upload_points(\n",
     "\tcollection_name=collection_name,\n",
-    "\trecords=[\n",
+    "\tpoints=[\n",
     "\t\tmodels.Record(\n",
     "\t\t\tid=idx,\n",
     "\t\t\tvector=encoder.encode(doc[\"description\"]).tolist(),\n",
@@ -166,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
