--- a/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation.ipynb
@@ -10,16 +10,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langchain in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (0.0.300)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (6.0.1)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (2.0.27)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (3.9.3)\n",
+      "Requirement already satisfied: anyio<4.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (3.7.1)\n",
+      "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (0.5.14)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (1.33)\n",
+      "Requirement already satisfied: langsmith<0.1.0,>=0.0.38 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (0.0.92)\n",
+      "Requirement already satisfied: numexpr<3.0.0,>=2.8.4 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (2.9.0)\n",
+      "Requirement already satisfied: numpy<2,>=1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (1.26.1)\n",
+      "Requirement already satisfied: pydantic<3,>=1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (1.10.14)\n",
+      "Requirement already satisfied: requests<3,>=2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (2.31.0)\n",
+      "Requirement already satisfied: tenacity<9.0.0,>=8.1.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from langchain) (8.2.3)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.3.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (23.1.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.4.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (6.0.5)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.9.4)\n",
+      "Requirement already satisfied: idna>=2.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from anyio<4.0->langchain) (3.4)\n",
+      "Requirement already satisfied: sniffio>=1.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from anyio<4.0->langchain) (1.3.0)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from dataclasses-json<0.7,>=0.5.7->langchain) (3.20.2)\n",
+      "Requirement already satisfied: typing-inspect<1,>=0.4.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from dataclasses-json<0.7,>=0.5.7->langchain) (0.9.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from jsonpatch<2.0,>=1.33->langchain) (2.4)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pydantic<3,>=1->langchain) (4.8.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests<3,>=2->langchain) (3.3.1)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests<3,>=2->langchain) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests<3,>=2->langchain) (2023.7.22)\n",
+      "Requirement already satisfied: packaging>=17.0 in /Users/devlinduldulao/Library/Python/3.12/lib/python/site-packages (from marshmallow<4.0.0,>=3.18.0->dataclasses-json<0.7,>=0.5.7->langchain) (23.2)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain) (1.0.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "% pip install langchain"
+    "! pip install langchain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -27,15 +63,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "As of October 2020, there is no event scheduled for UFC 294. The next scheduled event is UFC 254, which is set to take place on October 24, 2020.\n"
+      "The UFC does not have an event numbered 294 currently scheduled. The next event is UFC 249 on May 9, 2020.\n"
      ]
     }
    ],
    "source": [
     "from langchain.llms import OpenAI\n",
     "\n",
-    "llm = OpenAI(openai_api_key=\"<your key here>\")\n",
+    "llm = OpenAI(openai_api_key=\"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\", model_name=\"gpt-3.5-turbo-instruct\")\n",
     "\n",
     "prompt = \"When is 294 UFC going to happen?\"\n",
     "\n",
@@ -52,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -61,14 +96,14 @@
      "text": [
       "\n",
       "\n",
-      "The main card of UFC 294 was cancelled due to a positive COVID-19 test from one of the fighters on the card. Health and safety protocols were followed and the event was cancelled out of an abundance of caution.\n"
+      "The main card of UFC 294 was cancelled due to multiple fighters testing positive for COVID-19. The UFC decided to cancel the event in order to prioritize the health and safety of the fighters and staff involved.\n"
      ]
     }
    ],
    "source": [
     "from langchain.llms import OpenAI\n",
     "\n",
-    "llm = OpenAI(openai_api_key=\"<your key here>\")\n",
+    "llm = OpenAI(openai_api_key=\"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\", model_name=\"gpt-3.5-turbo-instruct\")\n",
     "\n",
     "prompt = \"Why the main card of 294 ufc fight was cancelled?\"\n",
     "\n",
@@ -85,21 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n",
       "\n",
-      "It appears that the main card of UFC 294 was cancelled because Charles Oliveira suffered a laceration to his face which forced him out of the fight. Alexander Volkanovski stepped in to take his place.\n"
+      "\n",
+      "The main card of UFC 294 was cancelled due to Charles Oliveira suffering a serious laceration that forced him to withdraw from the event. Alexander Volkanovski stepped in as a replacement for the main event against Islam Makhachev. Oliveira shared images of his injury and apologized for not being able to compete.\n"
      ]
     }
    ],
    "source": [
-    "llm = OpenAI(openai_api_key=\"<your key here>\")\n",
+    "llm = OpenAI(openai_api_key=\"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\", model_name=\"gpt-3.5-turbo-instruct\")\n",
     "\n",
     "user_input = 'Why the main card of 294 ufc fight was cancelled?'\n",
     "vector_db_result = 'Charles Oliveira suffered a nasty laceration that forced him out of the UFC 294 main event vs. Islam Makhachev. Shortly after UFC CEO Dana White confirmed Alexander Volkanovski stepped in, Oliveira (34-9 MMA, 22-9 UFC) shared a pair of images of the gash, as well as a brief apology video where he sported a bandage on his left brow. “Sorry to everyone but you know everything,” Oliveira wrote in Portuguese.'\n",
@@ -127,21 +162,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " \n",
       "\n",
       "\n",
-      "I'm sorry, I'm not able to provide any information about the main card of the 294 UFC fight being cancelled. However, you may be able to find more information by searching through news articles or through the UFC website.\n"
+      "\n",
+      "Unfortunately, there is currently no information available on why the main card of the 294 UFC fight was cancelled. It is best to check official UFC channels or news outlets for updates on the situation.\n"
      ]
     }
    ],
    "source": [
-    "llm = OpenAI(openai_api_key=\"<your key here>\")\n",
+    "llm = OpenAI(openai_api_key=\"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\", model_name=\"gpt-3.5-turbo-instruct\")\n",
     "\n",
     "user_input = 'Why the main card of 294 ufc fight was cancelled?'\n",
     "vector_db_result = 'No information found'\n",
@@ -185,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
